--- a/fit-man/src/App.css
+++ b/fit-man/src/App.css
@@ -28,6 +28,172 @@
   color: #61dafb;
 }
 
+a {
+  text-decoration: none;
+  color: whitesmoke;
+}
+
+a :hover {
+  color: chocolate;
+}
+
+a :active {
+  color: coral;
+}
+
+/* a :visited {
+  color: gray;
+} */
+
+.active {
+  color: coral;
+}
+
+.container {
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+
+}
+/* .mylogo {
+  height: 2em;
+} */
+
+.nav-ulist {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  /* justify-content: space-between; */
+}
+
+.mynavbar {
+  width: 100%;
+  height: 3.5em;
+  background-image: linear-gradient(to bottom right, rgba(0,0,0,0),rgba(255, 122, 74,0.2),rgba(255, 122, 74,0.4),rgba(255, 122, 74,0.7) );
+  border-style: ridge;
+  border-radius: 5px;
+  border-color: rgba(255, 255, 255, 0.3);
+  border-width: 1px;
+  color: whitesmoke;
+  font-size: medium;
+  font-weight: bold;
+}
+
+.mynavtitle {
+  text-decoration: none;
+  display: block;
+  float: left;
+  margin-right: 2em;
+  margin-left: 1em;
+  font-size: 2em;
+}
+
+.mynavtitle :hover {
+  color: coral;
+}
+
+.mynavtitle :active {
+  color: chocolate;
+}
+
+.myaccountitem {
+  padding-left: 60em;
+}
+
+.mynavitem {
+  position: relative;
+  text-decoration: none;
+  display: block;
+  color: whitesmoke;
+  float:left;
+  margin: auto 2em;
+}
+
+.mynavitem :hover {
+  color: coral;
+}
+
+.mynavitem :active {
+  color: chocolate;
+}
+
+.mycard {
+  border-style: ridge;
+  border-width: thin;
+  border-color: darkgray;
+  margin: 5em 5em 5em 5em;
+  padding: 2em 2em 2em 2em;
+}
+
+.mytitle {
+  font-weight: bold;
+  color: coral;
+}
+
+.mydescription {
+  font-weight: normal;
+  color: whitesmoke;
+}
+
+.myinfo {
+  font-weight: lighter;
+  color: lightgray;
+}
+
+.myfooter{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem; 
+  color: lightgray;
+}
+
+.mybtn {
+  border-style: solid;
+  border-width: thin;
+  border-radius: 5px;
+  font-weight: bold;
+  padding: 0.1em 0.5em 0.1em 0.5em;
+}
+
+.mybtnprimary {
+  border-color: coral;
+  background-color: coral;
+  color: whitesmoke;
+}
+
+.mybtnprimary-outline {
+  border-color: coral;
+  background-color: rgba(0, 0, 0, 0);
+  color: whitesmoke;
+}
+
+.bkg-primary {
+  background-color: coral;
+}
+
+.bkg-transp {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.bkg-secondary {
+  background-color: whitesmoke;
+}
+
+.txt-primary {
+  color: coral;
+
+}
+.txt-secondary {
+  color: whitesmoke;
+}
+.txt-dark {
+  color: rgb(0, 0, 0);
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
