--- a/fit-man/src/css/App.css
+++ b/fit-man/src/css/App.css
@@ -117,10 +117,12 @@ html,
 body {
   background: #fff;
   font-family: 'Poppins', sans-serif;
+  height: 100%;
 }
 
 main {
-  padding-top: 10em;
+  margin-top: 80px;
+
 }
 
 ::selection {
@@ -648,7 +650,7 @@ banner
 
 .video-overlay {
     position: absolute;
-    background-color: rgba(35,45,57,0.8);
+    background-color: rgba(0, 0, 0, 0.9);
     top: 0;
     left: 0;
     bottom: 7px;
@@ -1120,6 +1122,8 @@ footer
 --------------------------------------------- 
 */
 footer {
+  top: 100vh;
+  position: sticky;
   text-align: center;
   padding: 30px 0px;
 }
