Implement participant counter for gyms and courses

--- a/fit-man/src/css/App.css
+++ b/fit-man/src/css/App.css
@@ -1517,3 +1517,9 @@ Forms design
 .logout-display {
   display: none;
 }
+
+p.address span{
+  color:#ed563b;
+  margin: 0 0.5em 0 0;
+  font-size: 18px!important;
+}
